# cachemeifyoucan

./: README.md  action.yml  cachemeifyoucan.py  cachemeifyoucan.yaml  pyproject.toml
.github/workflows/: integration-test.yml
scripts/: parse_cache.py  request2curl.py
tests/integration/: cachemeifyoucan.yaml
